--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <div class="container">
-        <ul id="recipe-list">
+        <ul id="recipe-list" class="recipe-list">
             <li class="recipe-item">
                 <img src="https://spoonacular.com/recipeImages/12345-312x231.jpg" alt="recipe 1">
                 <h2>Recipe 1</h2>
