js qismi tugallandi, APIga ulandi

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <ul id="recipe-list" class="recipe-list">
-            <li class="recipe-item">
+            <!-- <li class="recipe-item">
                 <img src="https://spoonacular.com/recipeImages/12345-312x231.jpg" alt="recipe 1">
                 <h2>Recipe 1</h2>
                 <p>
@@ -46,9 +46,9 @@
                     Ingredient 3
                 </p>
                 <a href="#">View Recipe</a>
-            </li>
+            </li> -->
         </ul>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
